--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
     margin-left: 439px;
     margin-top: 88px;
 }
-.surati {
+.poto {
     width: 237.95px;
     height: 184.57px;
     margin-left: 156px;
     padding-top: 76px;
 }
-.satauri {
+.poto {
     margin-left: 56px;
     font-weight: 700;
     font-size: 30px;
